<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_designation"
                android:textSize="16sp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/designation"
                android:background="@drawable/border"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:padding="12dp"
                android:hint="@string/hint_designation"
                android:textSize="16sp"
                android:labelFor="@+id/designation"
                android:inputType="text"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_etat"
                android:textSize="16sp"/>
            <!-- Liste déroulante -->
            <Spinner
                android:id="@+id/etat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/border"
                android:padding="12dp"
                android:entries="@array/etat_items"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_quantite"
                android:textSize="16sp"/>
            <!-- Input numérique -->
            <EditText
                android:id="@+id/quantite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/border"
                android:inputType="number"
                android:hint="@string/hint_quantite"
                android:textSize="16sp"
                android:padding="12dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/btn_enregistrer"
                android:background="@drawable/border_primary"
                android:textColor="@color/neutral"
                android:id="@+id/saveButton"
                android:textSize="18sp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/btn_annuler"
                android:id="@+id/cancelButton"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:background="@drawable/border_cancel"
                android:layout_marginBottom="10dp"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>